--- a/index.html
+++ b/index.html
@@ -3,38 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,600;1,200&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <header>
+    <h1 id="title-1">Reliable, efficient delivery</h1>
+    <h1 id="title-2">Powered by Technology</h1>
+    <p id="slogan">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+  </header>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+  <article id="card-container">
+    <section class="card card-supervisor">
+      <h2>Supervisor</h2>
+      <p>Monitors activity to identify project roadblocks</p>
+      <img src="./images/icon-supervisor.svg" alt="upervisor icon">
+    </section>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+    <section class="card card-teambuilder">
+      <h2>Team Builder</h2>
+      <p>Scans our talent network to create the optimal team for your project</p>
+      <img src="./images/icon-team-builder.svg" alt="team builder icon">
+    </section>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+    <section class="card card-calculator">
+      <h2>Calculator</h2>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src="./images/icon-calculator.svg" alt="calculator icon">
+    </section>
+    
+    <section class="card card-karma">
+      <h2>Karma</h2>
+      <p>Regularly evaluates our talent to ensure quality</p>
+      <img src="./images/icon-karma.svg" alt="karma icon">
+    </section>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+  </article>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
